--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/aprobar-requisitos-liquidacion/aprobar-requisitos-liquidacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/aprobar-requisitos-liquidacion/aprobar-requisitos-liquidacion.component.html
@@ -67,7 +67,7 @@
             Actualización de póliza
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <app-actualizacion-poliza *ngIf="contratacionProyectoId && data" [esVerDetalle]="esVerDetalle" [contratacionProyectoId]="contratacionProyectoId" [contratoPolizaActualizacionId]="data.contratoPolizaActualizacionId" [contratoPolizaId]="data.contratoPolizaId" [data]="data" (semaforoActualizacionPoliza)="valueSemaforoActualizacionPoliza($event)"></app-actualizacion-poliza>
+        <app-actualizacion-poliza *ngIf="contratacionId && data" [esVerDetalle]="esVerDetalle" [contratacionId]="contratacionId" [contratoPolizaActualizacionId]="data.contratoPolizaActualizacionId" [contratoPolizaId]="data.contratoPolizaId" [data]="data" (semaforoActualizacionPoliza)="valueSemaforoActualizacionPoliza($event)"></app-actualizacion-poliza>
       </mat-expansion-panel>
       <mat-expansion-panel class="expansion-style">
         <mat-expansion-panel-header class="expansion-style--header" *ngIf="!esVerDetalle">
@@ -84,7 +84,7 @@
             Balance financiero
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <app-tabla-balance-financiero *ngIf="contratacionProyectoId" [esVerDetalle]="esVerDetalle" [contratacionProyectoId]="contratacionProyectoId" (semaforoBalanceFinanciero)="valueSemaforoBalanceFinanciero($event)"></app-tabla-balance-financiero>
+        <app-tabla-balance-financiero *ngIf="contratacionId" [esVerDetalle]="esVerDetalle" [contratacionId]="contratacionId" (semaforoBalanceFinanciero)="valueSemaforoBalanceFinanciero($event)"></app-tabla-balance-financiero>
       </mat-expansion-panel>
       <mat-expansion-panel class="expansion-style">
         <mat-expansion-panel-header class="expansion-style--header" *ngIf="!esVerDetalle">
@@ -101,7 +101,7 @@
             Informe final
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <app-tabla-informe-final *ngIf="contratacionProyectoId" [esVerDetalle]="esVerDetalle" [contratacionProyectoId]="contratacionProyectoId" (semaforoInformeFinal)="valueSemaforoInformeFinal($event)"></app-tabla-informe-final>
+        <app-tabla-informe-final *ngIf="contratacionId" [esVerDetalle]="esVerDetalle" [contratacionId]="contratacionId" (semaforoInformeFinal)="valueSemaforoInformeFinal($event)"></app-tabla-informe-final>
       </mat-expansion-panel>
     </mat-accordion>
   </div>
