--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-balance-financiero-gtlc/tabla-balance-financiero-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-balance-financiero-gtlc/tabla-balance-financiero-gtlc.component.html
@@ -28,7 +28,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del balance </th>
             <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoValidacion }} </td>
         </ng-container>
-        <ng-container matColumnDef="contratacionProyectoId">
+        <ng-container matColumnDef="contratacionId">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
             Gestión
             </th>
