--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/verificar-requisitos-gtlc/verificar-requisitos-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/verificar-requisitos-gtlc/verificar-requisitos-gtlc.component.html
@@ -43,7 +43,7 @@
                   Actualización de póliza
                 </mat-panel-title>
               </mat-expansion-panel-header>
-            <app-actualizacion-poliza-gtlc *ngIf="contratacionProyectoId && data" [esVerDetalle]="esVerDetalle" [contratacionProyectoId]="contratacionProyectoId" [contratoPolizaActualizacionId]="data.contratoPolizaActualizacionId" [contratoPolizaId]="data.contratoPolizaId" [data]="data" (semaforoActualizacionPoliza)="valueSemaforoActualizacionPoliza($event)"></app-actualizacion-poliza-gtlc>
+            <app-actualizacion-poliza-gtlc *ngIf="contratacionId && data" [esVerDetalle]="esVerDetalle" [contratacionId]="contratacionId" [contratoPolizaActualizacionId]="data.contratoPolizaActualizacionId" [contratoPolizaId]="data.contratoPolizaId" [data]="data" (semaforoActualizacionPoliza)="valueSemaforoActualizacionPoliza($event)"></app-actualizacion-poliza-gtlc>
 
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
@@ -61,7 +61,7 @@
                   Balance financiero
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-tabla-balance-financiero-gtlc *ngIf="contratacionProyectoId"  [esVerDetalle]="esVerDetalle" [verDetalleBtn]=false [contratacionProyectoId]="contratacionProyectoId" (semaforoBalanceFinanciero)="valueSemaforoBalanceFinanciero($event)"></app-tabla-balance-financiero-gtlc>
+            <app-tabla-balance-financiero-gtlc *ngIf="contratacionId"  [esVerDetalle]="esVerDetalle" [verDetalleBtn]=false [contratacionId]="contratacionId" (semaforoBalanceFinanciero)="valueSemaforoBalanceFinanciero($event)"></app-tabla-balance-financiero-gtlc>
 
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style">
@@ -79,7 +79,7 @@
                   Informe final
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-tabla-informe-final-gtlc *ngIf="contratacionProyectoId" [esVerDetalle]="esVerDetalle" [verDetalleBtn]=false [contratacionProyectoId]="contratacionProyectoId" (semaforoInformeFinal)="valueSemaforoInformeFinal($event)"></app-tabla-informe-final-gtlc>
+            <app-tabla-informe-final-gtlc *ngIf="contratacionId" [esVerDetalle]="esVerDetalle" [verDetalleBtn]=false [contratacionId]="contratacionId" (semaforoInformeFinal)="valueSemaforoInformeFinal($event)"></app-tabla-informe-final-gtlc>
         </mat-expansion-panel>
     </mat-accordion>
 </section>
