--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/validar-requerimientos-liquidaciones/validar-requerimientos-liquidaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/validar-requerimientos-liquidaciones/validar-requerimientos-liquidaciones.component.html
@@ -65,7 +65,7 @@
             Actualización de póliza
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <app-actualizacion-poliza *ngIf="contratacionProyectoId && data" [contratacionProyectoId]="contratacionProyectoId" [contratoPolizaActualizacionId]="data.contratoPolizaActualizacionId" [contratoPolizaId]="data.contratoPolizaId" [data]="data" [esVerDetalle]="esVerDetalle" (semaforoActualizacionPoliza)="valueSemaforoActualizacionPoliza($event)"></app-actualizacion-poliza>
+        <app-actualizacion-poliza *ngIf="contratacionId && data" [contratacionId]="contratacionId" [contratoPolizaActualizacionId]="data.contratoPolizaActualizacionId" [contratoPolizaId]="data.contratoPolizaId" [data]="data" [esVerDetalle]="esVerDetalle" (semaforoActualizacionPoliza)="valueSemaforoActualizacionPoliza($event)"></app-actualizacion-poliza>
       </mat-expansion-panel>
       <mat-expansion-panel class="expansion-style">
         <mat-expansion-panel-header class="expansion-style--header" *ngIf="!esVerDetalle">
@@ -82,7 +82,7 @@
             Balance financiero
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <app-tabla-balance-financiero *ngIf="contratacionProyectoId" [contratacionProyectoId]="contratacionProyectoId" [esVerDetalle]="esVerDetalle" (semaforoBalanceFinanciero)="valueSemaforoBalanceFinanciero($event)"></app-tabla-balance-financiero>
+        <app-tabla-balance-financiero *ngIf="contratacionId" [contratacionId]="contratacionId" [esVerDetalle]="esVerDetalle" (semaforoBalanceFinanciero)="valueSemaforoBalanceFinanciero($event)"></app-tabla-balance-financiero>
       </mat-expansion-panel>
       <mat-expansion-panel class="expansion-style">
         <mat-expansion-panel-header class="expansion-style--header" *ngIf="!esVerDetalle">
@@ -99,7 +99,7 @@
             Informe final
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <app-tabla-informe-final *ngIf="contratacionProyectoId" [contratacionProyectoId]="contratacionProyectoId" [esVerDetalle]="esVerDetalle" (semaforoInformeFinal)="valueSemaforoInformeFinal($event)"></app-tabla-informe-final>
+        <app-tabla-informe-final *ngIf="contratacionId" [contratacionId]="contratacionId" [esVerDetalle]="esVerDetalle" (semaforoInformeFinal)="valueSemaforoInformeFinal($event)"></app-tabla-informe-final>
       </mat-expansion-panel>
     </mat-accordion>
   </div>
