--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-liquidacion-contrato-obra/tabla-liquidacion-contrato-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-liquidacion-contrato-obra/tabla-liquidacion-contrato-obra.component.html
@@ -79,7 +79,7 @@
     </ng-container>
 
     <!-- id Column -->
-    <ng-container matColumnDef="contratacionProyectoId">
+    <ng-container matColumnDef="contratacionId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Gestión
       </th>
@@ -89,7 +89,7 @@
           mat-raised-button
           color="accent"
           class="btn-table"
-          [routerLink]="['aprobarRequisitosParaLiquidacion', element.contratacionProyectoId]"
+          [routerLink]="['aprobarRequisitosParaLiquidacion', element.contratacionId]"
         >
           Aprobar requisitos para liquidación
         </a>
@@ -98,7 +98,7 @@
           mat-raised-button
           color="accent"
           class="btn-table"
-          [routerLink]="['verDetalleEditarRequisitos', element.contratacionProyectoId]"
+          [routerLink]="['verDetalleEditarRequisitos', element.contratacionId]"
         >
           Ver detalle/Editar
         </a>
@@ -109,7 +109,7 @@
           color="accent"
           class="btn-table"
           type="button"
-          (click)="SendToNovedades(element.contratacionProyectoId)"
+          (click)="SendToNovedades(element.contratacionId)"
         >
           Enviar a control y seguimiento
         </button>
@@ -119,7 +119,7 @@
           color="accent"
           class="btn-table"
           type="button"
-          [routerLink]="['verDetalleRequisitos', element.contratacionProyectoId]"
+          [routerLink]="['verDetalleRequisitos', element.contratacionId]"
         >
           Ver detalle
         </a>
