--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-liquidacion-intervn-gtlc/tabla-liquidacion-intervn-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-liquidacion-intervn-gtlc/tabla-liquidacion-intervn-gtlc.component.html
@@ -37,7 +37,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la verifiación </th>
             <td mat-cell *matCellDef="let element"> {{element.estadoTramiteLiquidacionString}} </td>
         </ng-container>
-        <ng-container matColumnDef="contratacionProyectoId">
+        <ng-container matColumnDef="contratacionId">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
             Gestión
             </th>
@@ -47,7 +47,7 @@
                 mat-raised-button
                 color="accent"
                 class="btn-table"
-                [routerLink]="['verificarRequisitos', element.contratacionProyectoId]"
+                [routerLink]="['verificarRequisitos', element.contratacionId]"
                 >
                     Verificar requisitos para liquidación
                 </a>
@@ -56,7 +56,7 @@
                     mat-raised-button
                     color="accent"
                     class="btn-table"
-                    [routerLink]="['verDetalleEditarRequisitos', element.contratacionProyectoId]"
+                    [routerLink]="['verDetalleEditarRequisitos', element.contratacionId]"
                 >
                     Ver detalle/Editar
                 </a>
@@ -67,7 +67,7 @@
                     color="accent"
                     class="btn-table"
                     type="button"
-                    (click)="SendToFinalLiquidation(element.contratacionProyectoId)"
+                    (click)="SendToFinalLiquidation(element.contratacionId)"
                 >
                     Enviar para liquidación
                 </button>
@@ -77,7 +77,7 @@
                     color="accent"
                     class="btn-table"
                     type="button"
-                    [routerLink]="['verDetalleRequisitos', element.contratacionProyectoId]"
+                    [routerLink]="['verDetalleRequisitos', element.contratacionId]"
                 >
                     Ver detalle
                 </a>
