--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/verificar-informe-gtlc/verificar-informe-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/verificar-informe-gtlc/verificar-informe-gtlc.component.html
@@ -122,7 +122,7 @@
       </mat-expansion-panel>
     </mat-accordion>
   
-    <app-observaciones-supervisor *ngIf="contratacionProyectoId && data" [contratacionProyectoId] = "contratacionProyectoId" [padreId] = "data.informeFinal.informeFinalId" [tipoObservacionCodigo]="listaTipoObservacionLiquidacionContratacion.informeFinal" [menuId]="listaMenu.aprobarSolicitudLiquidacionContratacion" [esVerDetalle]="esVerDetalle"></app-observaciones-supervisor>
-    <app-observaciones-informe-final *ngIf="!esVerDetalle && contratacionProyectoId && data" [contratacionProyectoId] = "contratacionProyectoId" [informeFinalId] = "data.informeFinal.informeFinalId" [tipoObservacionCodigo]="listaTipoObservacionLiquidacionContratacion.informeFinal" [menuId]="listaMenu.gestionarSolicitudLiquidacionContratacion" (callOnInitParent)="redirectToParent()"></app-observaciones-informe-final>
+    <app-observaciones-supervisor *ngIf="contratacionId && data" [contratacionId] = "contratacionId" [padreId] = "data.informeFinal.informeFinalId" [tipoObservacionCodigo]="listaTipoObservacionLiquidacionContratacion.informeFinal" [menuId]="listaMenu.aprobarSolicitudLiquidacionContratacion" [esVerDetalle]="esVerDetalle"></app-observaciones-supervisor>
+    <app-observaciones-informe-final *ngIf="!esVerDetalle && contratacionId && data" [contratacionId] = "contratacionId" [informeFinalId] = "data.informeFinal.informeFinalId" [tipoObservacionCodigo]="listaTipoObservacionLiquidacionContratacion.informeFinal" [menuId]="listaMenu.gestionarSolicitudLiquidacionContratacion" (callOnInitParent)="redirectToParent()"></app-observaciones-informe-final>
   
   </section>  
