--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-balance-financiero/tabla-balance-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-balance-financiero/tabla-balance-financiero.component.html
@@ -65,7 +65,7 @@
     </ng-container>
 
     <!-- id Column -->
-    <ng-container matColumnDef="contratacionProyectoId">
+    <ng-container matColumnDef="contratacionId">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         Gestión
       </th>
