--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/aprobar-requisitos-liquidacion/aprobar-requisitos-liquidacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/aprobar-requisitos-liquidacion/aprobar-requisitos-liquidacion.component.html
@@ -73,7 +73,8 @@
         <mat-expansion-panel-header class="expansion-style--header" *ngIf="!esVerDetalle">
           <mat-panel-title
             class="expansion-style--title"
-            [class.sin-diligenciar]="semaforoBalanceFinanciero == 'Incompleto'"
+            [class.sin-diligenciar]="semaforoBalanceFinanciero == null"
+            [class.en-proceso]="semaforoBalanceFinanciero == 'Incompleto'"
             [class.completo]="semaforoBalanceFinanciero == 'Completo'"
           >
             Balance financiero
@@ -90,7 +91,8 @@
         <mat-expansion-panel-header class="expansion-style--header" *ngIf="!esVerDetalle">
           <mat-panel-title
             class="expansion-style--title"
-            [class.sin-diligenciar]="semaforoInformeFinal == 'Incompleto'"
+            [class.sin-diligenciar]="semaforoInformeFinal == null"
+            [class.en-proceso]="semaforoInformeFinal == 'Incompleto'"
             [class.completo]="semaforoInformeFinal == 'Completo'"
           >
             Informe final
