--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-informe-final-gtlc/tabla-informe-final-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-informe-final-gtlc/tabla-informe-final-gtlc.component.html
@@ -29,7 +29,7 @@
             <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoVerificacion }} </td>
         </ng-container>
         <!-- id Column -->
-        <ng-container matColumnDef="contratacionProyectoId">
+        <ng-container matColumnDef="contratacionId">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
             Gestión
             </th>
