--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/validar-requerimientos-liquidaciones/validar-requerimientos-liquidaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/validar-requerimientos-liquidaciones/validar-requerimientos-liquidaciones.component.html
@@ -71,7 +71,8 @@
         <mat-expansion-panel-header class="expansion-style--header" *ngIf="!esVerDetalle">
           <mat-panel-title
             class="expansion-style--title"
-            [class.sin-diligenciar]="semaforoBalanceFinanciero == 'Incompleto'"
+            [class.sin-diligenciar]="semaforoBalanceFinanciero == null"
+            [class.en-proceso]="semaforoBalanceFinanciero == 'Incompleto'"
             [class.completo]="semaforoBalanceFinanciero == 'Completo'"
           >
             Balance financiero
@@ -88,7 +89,8 @@
         <mat-expansion-panel-header class="expansion-style--header" *ngIf="!esVerDetalle">
           <mat-panel-title
             class="expansion-style--title"
-            [class.sin-diligenciar]="semaforoInformeFinal == 'Incompleto'"
+            [class.sin-diligenciar]="semaforoInformeFinal == null"
+            [class.en-proceso]="semaforoInformeFinal == 'Incompleto'"
             [class.completo]="semaforoInformeFinal == 'Completo'"
           >
             Informe final
