--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/detalle-orden-giro-gog/detalle-orden-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/detalle-orden-giro-gog/detalle-orden-giro-gog.component.html
@@ -35,7 +35,7 @@
                     </mat-expansion-panel-header>
                     <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
                         <mat-card-content style="text-align: left;">
-                            <p><strong>Código SIFI:</strong> 357233</p>
+                            <p><strong>Código de noegocio SIFI para radicación:</strong> 357233</p>
                             <p><strong>Coordinación responsable:</strong> Andina</p>
                             <p><strong>Grupo de contrato:</strong> Grupo 1</p>
                             <p><strong>Tipo de contrato:</strong> Obra o interventoría</p>
@@ -208,7 +208,7 @@
                                 <p><strong>Número de Cuenta: </strong>778969876543257</p>
                                 <p><strong>Banco: </strong>Davivienda</p>
                                 <p><strong>Tipo de Cuenta: </strong>Corriente</p>
-                                <p><strong>Código SIFI: </strong>357314</p>
+                                <p><strong>Código de noegocio SIFI para radicación: </strong>357314</p>
                             </div>
                             <mat-card-title class="header-card--text sub-text">
                                 Aportante 2
@@ -221,7 +221,7 @@
                                 <p><strong>Número de Cuenta: </strong>6758-9879-98760</p>
                                 <p><strong>Banco: </strong>Bancolombia</p>
                                 <p><strong>Tipo de Cuenta: </strong>Ahorros</p>
-                                <p><strong>Código SIFI: </strong>358765</p>
+                                <p><strong>Código de noegocio SIFI para radicación: </strong>358765</p>
                             </div>
                         </mat-card-content>
                     </mat-card>
