--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/registrar/registrar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/registrar/registrar.component.html
@@ -756,7 +756,7 @@
                                     cuentaBancaria.get('codigoSIFI').touched) ||
                                   (cuentaBancaria.get('codigoSIFI').invalid && edicion)
                               }">
-                              Código SIFI
+                              Código de noegocio SIFI para radicación
                             </label>
                           </div>
                           <div class="col d-flex">
