--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-origen/form-origen.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-origen/form-origen.component.html
@@ -19,7 +19,7 @@
                                     <p><strong>Número de Cuenta: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.numeroCuentaBanco }} </p>
                                     <p><strong>Banco: </strong> {{ firstLetterUpperCase( getBanco( aportante.get( 'cuentaBancariaId' ).value.bancoCodigo ) ) }} </p>
                                     <p><strong>Tipo de Cuenta: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.tipoCuentaCodigo }} </p>
-                                    <p><strong>Código SIFI: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.codigoSifi }} </p>
+                                    <p><strong>Código de noegocio SIFI para radicación: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.codigoSifi }} </p>
                                 </div>
                             </ng-container>
                             <ng-template #elseTemplate>
@@ -28,7 +28,7 @@
                                     <p><strong>Número de Cuenta: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.numeroCuentaBanco }} </p>
                                     <p><strong>Banco: </strong> {{ firstLetterUpperCase( getBanco( aportante.get( 'cuentaBancariaId' ).value.bancoCodigo ) ) }} </p>
                                     <p><strong>Tipo de Cuenta: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.tipoCuentaCodigo }} </p>
-                                    <p><strong>Código SIFI: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.codigoSifi }} </p>
+                                    <p><strong>Código de noegocio SIFI para radicación: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.codigoSifi }} </p>
                                 </div>
                             </ng-template>
                         </div>
@@ -88,7 +88,7 @@
                                     <p><strong>Número de Cuenta: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.numeroCuentaBanco }} </p>
                                     <p><strong>Banco: </strong> {{ firstLetterUpperCase( getBanco( aportante.get( 'cuentaBancariaId' ).value.bancoCodigo ) ) }} </p>
                                     <p><strong>Tipo de Cuenta: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.tipoCuentaCodigo }} </p>
-                                    <p><strong>Código SIFI: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.codigoSifi }} </p>
+                                    <p><strong>Código de noegocio SIFI para radicación: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.codigoSifi }} </p>
                                 </div>
                             </ng-container>
                             <ng-template #elseTemplate>
@@ -97,7 +97,7 @@
                                     <p><strong>Número de Cuenta: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.numeroCuentaBanco }} </p>
                                     <p><strong>Banco: </strong> {{ firstLetterUpperCase( getBanco( aportante.get( 'cuentaBancariaId' ).value.bancoCodigo ) ) }} </p>
                                     <p><strong>Tipo de Cuenta: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.tipoCuentaCodigo }} </p>
-                                    <p><strong>Código SIFI: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.codigoSifi }} </p>
+                                    <p><strong>Código de noegocio SIFI para radicación: </strong> {{ aportante.get( 'cuentaBancariaId' ).value.codigoSifi }} </p>
                                 </div>
                             </ng-template>
                         </div>
