--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/datos-solicitud-gtlc/datos-solicitud-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/datos-solicitud-gtlc/datos-solicitud-gtlc.component.html
@@ -1,6 +1,6 @@
 <mat-card class="shipping-card var-main-gris">
     <mat-card-content align="left">
-        <p><strong>Código SIFI: </strong><em>357233</em></p>
+        <p><strong>Código de noegocio SIFI para radicación: </strong><em>357233</em></p>
         <p><strong>Coordinación responsable: </strong><em>Andina</em></p>
         <p><strong>Grupo de contrato: </strong><em>Grupo 1</em></p>
         <p><strong>Tipo de contrato: </strong><em>Obra</em></p>
