--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-informe-final/tabla-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-informe-final/tabla-informe-final.component.html
@@ -75,7 +75,7 @@
           class="btn-table"
           [routerLink]="['aprobarInformeFinal', element.proyectoId]"
         >
-          Aprobar
+          Validar
         </a> 
         <a *ngIf="!esVerDetalle && element.registroCompleto === 'Completo'"
           mat-button
