--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/home/home.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/home/home.component.html
@@ -4,14 +4,14 @@
       <img src="assets/img/icon/regresar.svg" alt="Regresar" />
     </a>
   </div>
-  <h1 class="title-menu--h1">Registrar y validar solicitud de liquidación contractual</h1>
+  <h1 class="title-menu--h1">Registrar y verificar solicitud de liquidación contractual</h1>
   <button mat-mini-fab color="primary" class="btn-info" (click)="verAyuda = !verAyuda">?</button>
 
   <div class="text-info" *ngIf="verAyuda">
     <button mat-icon-button (click)="verAyuda = false" class="text-info--close">
       <img src="assets/img/icon/cerrar-gris.svg" alt="cerrar ayuda" />
     </button>
-    Bienvenida/o, aquí podrá realizar la validación de los requisitos para solicitar la liquidación de los contratos de
+    Bienvenida/o, aquí podrá realizar la verificación de los requisitos para solicitar la liquidación de los contratos de
     obra e interventoría asignados a usted que cuentan con póliza actualizada, balance financiero aprobado e informe
     final para cada uno de los proyectos asociados al contrato aprobado, y que fueron ejecutados en el marco de la
     gestión del FFIE.
