--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/aprobar-informe-final/aprobar-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/aprobar-informe-final/aprobar-informe-final.component.html
@@ -7,10 +7,10 @@
     </div>
     <h1 class="title-menu--h1">
       <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
-          Ver detalle aprobación de Informe final {{ data.informeFinal.proyecto.llaveMen }}
+          Ver detalle validación de Informe final {{ data.informeFinal.proyecto.llaveMen }}
       </ng-container>
       <ng-template #noEsVerDetalle>
-          {{ esRegistroNuevo === true ? 'Aprobar' : 'Ver detalle/Editar Aprobación de' }} Informe final {{ data.informeFinal.proyecto.llaveMen }}
+          {{ esRegistroNuevo === true ? 'Validar' : 'Ver detalle/Editar Aprobación de' }} Informe final {{ data.informeFinal.proyecto.llaveMen }}
       </ng-template>  
     </h1>
     <p class="colorMainColor mt-1em">
