--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/home/home.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/home/home.component.html
@@ -4,14 +4,14 @@
       <img src="assets/img/icon/regresar.svg" alt="Regresar" />
     </a>
   </div>
-  <h1 class="title-menu--h1">Aprobar solicitud de liquidación contractual</h1>
+  <h1 class="title-menu--h1">Validar solicitud de liquidación contractual</h1>
   <button mat-mini-fab color="primary" class="btn-info" (click)="verAyuda = !verAyuda">?</button>
 
   <div class="text-info" *ngIf="verAyuda">
     <button mat-icon-button (click)="verAyuda = false" class="text-info--close">
       <img src="assets/img/icon/cerrar-gris.svg" alt="cerrar ayuda" />
     </button>
-    Bienvenida/o, aquí podrá realizar la aprobación a la solicitud de liquidación de los contratos de obra e
+    Bienvenida/o, aquí podrá realizar la validación a la solicitud de liquidación de los contratos de obra e
     interventoría asignados a usted que cuentan con póliza actualizada, balance financiero aprobado y el informe final
     para cada uno de los proyectos asociados al contrato aprobado, que fueron verificados por el apoyo a la supervisión
     y que fueron ejecutados en el marco de la gestión del FFIE.
