--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-balance-financiero/tabla-balance-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-balance-financiero/tabla-balance-financiero.component.html
@@ -77,7 +77,7 @@
           class="btn-table"
           [routerLink]="['aprobarBalance',element.proyectoId]"
         >
-        Aprobar
+        Validar
         </a> 
         <a *ngIf="!esVerDetalle && element.registroCompleto === 'Completo'"
           mat-button
