--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-liquidacion-contrato-obra/tabla-liquidacion-contrato-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-liquidacion-contrato-obra/tabla-liquidacion-contrato-obra.component.html
@@ -91,7 +91,7 @@
           class="btn-table"
           [routerLink]="['aprobarRequisitosParaLiquidacion', element.contratacionId]"
         >
-          Aprobar requisitos para liquidación
+          Validar requisitos para liquidación
         </a>
         <a *ngIf="element.estadoAprobacionLiquidacionCodigo === '1' || element.estadoAprobacionLiquidacionCodigo === '2'"
           mat-button
