--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-balance-financiero/tabla-balance-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-balance-financiero/tabla-balance-financiero.component.html
@@ -57,7 +57,7 @@
     <!-- estadoValidacion Column -->
     <ng-container matColumnDef="estadoValidacion">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Estado de la validación
+        Estado de la verificación
       </th>
       <td mat-cell *matCellDef="let element">
         {{ element.estadoValidacion }}
@@ -77,7 +77,7 @@
           class="btn-table"
           [routerLink]="['validarBalance',element.proyectoId]"
         >
-         Validar
+         Verificar
         </a> 
         <a *ngIf="!esVerDetalle && element.registroCompleto === 'Completo'"
           mat-button
