--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-liquidacion-contrato-interventoria/tabla-liquidacion-contrato-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/tabla-liquidacion-contrato-interventoria/tabla-liquidacion-contrato-interventoria.component.html
@@ -57,7 +57,7 @@
     <!-- estadoValidacion Column -->
     <ng-container matColumnDef="estadoValidacionLiquidacionString">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Estado de la validación
+        Estado de la verificación
       </th>
       <td mat-cell *matCellDef="let element">
         {{ element.estadoValidacionLiquidacionString }}
@@ -77,7 +77,7 @@
           class="btn-table"
           [routerLink]="['validarRequisitos', element.contratacionId]"
         >
-          Validar requisitos para liquidación
+          Verificar requisitos para liquidación
         </a>
         <a *ngIf="element.estadoValidacionLiquidacionCodigo === '1' || element.estadoValidacionLiquidacionCodigo === '2'"
           mat-button
