--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/validar-informe-final/validar-informe-final.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/validar-informe-final/validar-informe-final.component.html
@@ -7,10 +7,10 @@
     </div>
     <h1 class="title-menu--h1">
       <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
-          Ver detalle validación Informe final {{ data.informeFinal.proyecto.llaveMen }}
+          Ver detalle verificación Informe final {{ data.informeFinal.proyecto.llaveMen }}
       </ng-container>
       <ng-template #noEsVerDetalle>
-          {{ esRegistroNuevo === true ? 'Validar' : 'Ver detalle/Editar' }} Informe final {{ data.informeFinal.proyecto.llaveMen }}
+          {{ esRegistroNuevo === true ? 'Verificar' : 'Ver detalle/Editar' }} Informe final {{ data.informeFinal.proyecto.llaveMen }}
       </ng-template>  
     </h1>
     <p class="colorMainColor mt-1em">
