observaciones liquidación - ocultar

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/actualizacion-poliza-rlc/actualizacion-poliza-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/actualizacion-poliza-rlc/actualizacion-poliza-rlc.component.html
@@ -167,8 +167,8 @@
             </mat-card>
         </mat-expansion-panel>
     </mat-accordion>
-    <!-- Colocas los if's -->
-    <div class="mt-2em">
+    <!-- Se comentan las observaciones, solicitado por Natalia (LCT) -->
+    <!--<div class="mt-2em">
         <mat-card class="shipping-card mainGris">
             <mat-card-header class="header-card header-card--margin">
                 <mat-card-title class="header-card--text textoGris">
@@ -199,5 +199,5 @@
                 </div>
             </mat-card-content>
         </mat-card>
-    </div>
+    </div>-->
 </section>
