--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/detalle-balance-financiero-rlc/detalle-balance-financiero-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/detalle-balance-financiero-rlc/detalle-balance-financiero-rlc.component.html
@@ -29,7 +29,8 @@
             Traslados de recursos
         </button>
     </div>  
-    <div class="mt-2em">
+    <!-- Se comentan las observaciones, solicitado por Natalia (LCT) -->
+    <!--<div class="mt-2em">
         <mat-card class="shipping-card mainGris">
             <mat-card-header class="header-card header-card--margin">
                 <mat-card-title class="header-card--text textoGris">
@@ -61,6 +62,6 @@
                 </div>
             </mat-card-content>
         </mat-card>
-    </div>
+    </div>-->
     
 </section>
