--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/detalle-informe-final-rlc/detalle-informe-final-rlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-liquidacion-contrato/components/detalle-informe-final-rlc/detalle-informe-final-rlc.component.html
@@ -55,7 +55,8 @@
         </mat-accordion>
     </div>
     <!--Se pondrá los if's-->
-    <div>
+    <!-- Se comentan las observaciones, solicitado por Natalia (LCT) -->
+    <!--<div>
         <div class="mt-2em">
             <mat-card class="shipping-card var-main-gris">
                 <mat-card-header class="header-card  header-card--margin">
@@ -84,5 +85,5 @@
                 </mat-card-content>
             </mat-card>
         </div>
-    </div>
+    </div>-->
 </section>
